--- a/src/components/usergroups/usergroups.css
+++ b/src/components/usergroups/usergroups.css
@@ -1,73 +1,190 @@
-.ontrack_usergroups{
-    color: white;
-    font-family: var(--font-family);
-    font-size: 20px;
-    display: flex;
-    flex-direction: row;
-    padding: 5rem;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+ 
+  list-style-type: none;
+  font-family: var(--font-family);
+  scroll-behavior: smooth;
+  color: white;
 }
 
-.ontrack_usergroups-content{
-    flex:1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-right: 5rem;
-}
+  
+  .container {
+    max-width: 200rem;
+    max-height: 50rem;
 
-.ontrack_usergtoups-image img{
-    width: 100%;
-    height: 100%;
-}
+  }
+  
+  .usergroups_header {
+    font-size: 40px;
+    text-align: center;
+    transform: translateY(120%)
+  }
+  
+  .swiper_container {
+    height: 52rem;
+    width: 80rem;
+    position: relative;
+   
+  }
 
 
-.button{
-    background-color: rgb(148, 78, 78);
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    justify-content: center;
-    border: solid 2px rgb(255, 255, 255);
+  
+  .swiper-slide {
+    width: 27rem;
+    height: 30rem;
+    position: relative;
     
+  
+  }
+
+.usergroups_slides{
+    padding: 5rem ;
+    display: flex;
+}
+
+.usergroups_slides img{
+    transform: translateX(-10%);
+}
+
+.slider-arrow{
+    color: white;
+}
+
+
+.swiper-slide img {
+  width: 36rem;
+  height: 30rem;
+  border-radius: 2rem;
+  object-fit: cover;
   
 }
 
-.circle_buttons{
-    display: flex;
-    flex-direction: row;
-    padding: 1rem;
-    gap: 20px;
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controller {
+  position: relative;
+  bottom: 9rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-700%);
+ 
+  
+}
+
+.slider-controller .swiper-button-next {
+  left: 58% !important;
+  transform: translateX(-58%) !important;
+}
+
+
+.slider-controller .slider-arrow {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  left: 42%;
+  transform: translateX(-42%);
+
+}
+
+
+.slider-controller .slider-arrow::after {
+  content: '';
     
 }
 
-@media screen and (min-width: 1049px) {
-    
+.swiper-pagination {
+  position: relative;
+  width: 15rem !important;
+  bottom: 1rem;
 }
 
-@media screen and (max-width: 1050px) {
-    .ontrack__header-image img{
-     
+.swiper-pagination-bullet{
+    background-color: red;
+    width: 1em;
+    height: 1em;
+  
+
+ 
+}
+
+.prev_left {
+    width: 2em;
+    height: 2em;
+    display: none;
+}
+
+.prev_right {
+    width: 2em;
+    height: 2em;
+    display: none;
+}
+
+.swiper-pagination2{
+  transform: translateX(-80%) !important;
+}
+
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: white;
+  
+}
+
+@media screen and (max-width: 1059px) {
+    .swiper-slide img {
+        width: 37rem;
+        height: 28rem;
     }
+}
 
-    .ontrack__header-content h1{
-        
-      
+
+@media (max-width: 990px) {
+    .slider-controller .swiper-button-next {
+      left: 70% !important;
+      transform: translateX(-70%) !important;
     }
-    
-    .ontrack__header-content p{
-       
-   
+  }
+  
+  @media (max-width: 450px) {
+    .slider-controller .swiper-button-next {
+      left: 80% !important;
+      transform: translateX(-80%) !important;
     }
+  }
+  
+  @media (max-width: 990px) {
+    .slider-controller .swiper-button-prev {
+      left: 30% !important;
+      transform: translateX(-30%) !important;
+    }
+  }
+  
+  @media (max-width: 450px) {
+    .slider-controller .swiper-button-prev {
+      left: 20% !important;
+      transform: translateX(-20%) !important;
+    }
+  }
 
-}
+  
 
-
-@media screen and (max-width: 700px) {
-
-}
-
-@media screen and (max-width: 550px) {
-   
-
-}
+  
+  @media (max-width: 500px) {
+    .swiper_container {
+      height: 47rem;
+    }
+    .swiper-slide {
+      width: 28rem !important;
+      height: 36rem !important;
+    }
+    .swiper-slide img {
+      width: 28rem !important;
+      height: 36rem !important;
+    }
+  }
