--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,11 @@ body {
     background:var(--color-bg);
 
 }
- 
+
+.other_purple {
+    background-color: #72236A;
+}
+
 .gradient__bg {
   background:-moz-radial-gradient(circle at 3% 70%, rgb(67, 26, 63) 0%, rgb(41, 0, 37) 35%);
 
@@ -46,7 +50,7 @@ body {
     margin:4rem 6rem;
   }
 
-  
+
 .scale-up-center {
 	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -91,5 +95,5 @@ body {
 
   .section__margin {
     margin: 4rem 2rem;
-  }  
+  }
 }
