--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,8 +1,10 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: var(--font-family);
+    
 }
 
 .container{
@@ -65,9 +67,9 @@
 }
 
 .account:hover{
-    background-color: white;
-    color: black;
-    border: 2px solid black;
+    background-color: rgb(112, 112, 112);;
+    color: white;
+    border: 2px solid rgb(112, 112, 112);;
 }
 
 .sign_google{
@@ -83,8 +85,9 @@
 }
 
 .sign_google:hover{
-    background-color: black;
+    background-color: rgb(112, 112, 112);
     color: white;
+    border-color: rgb(112, 112, 112);;
 }
 
 
