--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -1,74 +1,59 @@
 
-/*
-
-.main{
-    justify-content: center;
-    align-items: center;
-    padding-left: 5rem;
-    transform: translateY(-40%);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: var(--font-family);
+    
 }
-
-
 
 .container{
-  display:  flex;
-  background-color: rgb(231, 170, 170);
-  width: 80rem;
-  justify-content: center;
-  transform: translate(5%, 50%);
-  border-radius: 1%;
-
-  
-}
-
-.logo{
-    margin-left: 1rem;
-}
-
-.form h1{
-    margin-left: 1rem;
-  
+    display: flex;
+    height: 40rem;
+    width: 80rem;
+    border: 2px solid black;
+    margin: auto;
+    margin-top: 50px;
 }
 
 .form{
     display: flex;
-    flex-direction: column; 
-   
-   transform: translate(-45%, 5%);
-  
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+    background: white;
+
 }
 
-.form .logo .h1{
-    
-}
-
-.form .logo{
-    width: 100px;
-}
-
-.form input{
-    display: flex;
-    flex-direction: column; 
-    margin: 1rem;
-    padding: 2px;
-    width: 100%;
-    font-family: var(--font-family);
+.box{
+    padding: 12px;
+    width: 60%;
+    margin: 8px;
+    outline: none;
     border: none;
     background: transparent;
     border-bottom: 1px solid #000000;
-    color: black;
 }
 
-.form button{
+.side{
     display: flex;
-    margin: 1rem;
-    padding: 12px;
-    width: 100%;
-    font-family: var(--font-family);
-    align-items: center;
     justify-content: center;
-   
+    align-items: center;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+}
+
+.side img{
+    width: 95%;
+    height: 95%;
+    margin: 2rem;
+    border-top-left-radius: 2%;
+    border-bottom-right-radius: 2%;
+}
+
+.google{
+    width: 15px;
+    transform: translateX(-60%);
 }
 
 .account{
@@ -78,6 +63,13 @@
     border-radius: 2px;
     align-items: center;
     cursor: pointer;
+    border: 2px solid black;
+}
+
+.account:hover{
+    background-color: rgb(112, 112, 112);;
+    color: white;
+    border: 2px solid rgb(112, 112, 112);;
 }
 
 .sign_google{
@@ -85,41 +77,51 @@
     align-items: center;
     display: inline-flex;
     cursor: pointer;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 2px;
     background-color: white;
    
     
 }
 
+.sign_google:hover{
+    background-color: rgb(112, 112, 112);
+    color: white;
+    border-color: rgb(112, 112, 112);;
+}
+
+
+.form button{
+    display: flex;
+    margin: 0.5em;
+    padding: 12px;
+    width: 60%;
+    align-items: center;
+    justify-content: center;
+}
 
 .form p{
+    font-size: 14px;
+}
+
+.form input{
     display: flex;
-   align-items: center;
-   justify-content: center;
+    flex-direction: column; 
+    margin: 1rem;
+    padding: 2px;
+}
+
+.form h1{
+    font-size: 26px;
+    font-weight: 600;
+    margin-top: 80px;
+}
+
+
+
+
+.logo{
    
+    width: 100px;
+    transform: translate(-90%, 80%);
 }
-
-.image{
-  width: 500px;  
- 
-}
-
-.image img {
-    border-radius: 2%;
-}
-
-.google{
-    width: 15px;
-    transform: translateX(-60%);
-}
-
-.form a{
-    padding-left: 5px;
-}
-
-.sign_google {
-   
-}
-
-*/
