--- a/src/components/chatWindow/chatWindow.css
+++ b/src/components/chatWindow/chatWindow.css
@@ -8,3 +8,16 @@
 .react-chatbot-kit-chat-inner-container {
     width: 320px;
 }
+
+.bot-pfp {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+    background-color: purple;
+    color: white;
+    margin-right: 15px;    
+}
