Improve bot options
- Hard-coded some more colours to fix sometimes invisible text
- Added more options
- Improved detection

--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,13 @@ body {
     margin: 4rem 2rem;
   }
 }
+
+
+.react-chatbot-kit-chat-input {
+  color: black;
+}
+
+.react-chatbot-kit-user-chat-message {
+  color: black;
+}
+
