--- a/src/components/chatWindow/chatWindow.css
+++ b/src/components/chatWindow/chatWindow.css
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     font-size: 0.9rem;
-    background-color: purple;
+    background-color: #72236A;
     color: white;
     margin-right: 15px;    
 }
