--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -21,8 +21,23 @@
 
 .features_text{
   max-width: 40rem;
-  padding: 2rem;
+  padding-top: 2rem;
 }
+
+.features_text h1{
+    text-align: center;
+    padding-bottom: 0.6rem;
+}
+
+.features_text p{
+    font-size:18px;
+    color: white;
+   
+   }
+
+   .features_slides{
+    
+   }
 
 
 .mySwiper {
@@ -43,16 +58,221 @@
   height: 100%;
   transform: translateY(-10%);
   border-radius: 0%;
+  object-fit: cover;
 
-  
 }
 
-.swiper-pagination-bullet{
 
-  transform: translateX(1100%) !important;
+@media screen and (max-width: 1453px){
+   
+
+   .features_text h1{
+    font-size:40px;
+   }
+
+   .swiper-slide img {
+    padding-left: 2rem;
+
+  }
+
+   
 }
 
-.swiper-pagination1{
-  transform: translateX(50%) !important;
+@media screen and (max-width: 1417px){
+   
+    .features_text p{
+        font-size: 16px;
+    }
+
+
+   
 }
 
+
+@media screen and (max-width: 1300px) {
+   .features_text h1{
+        font-size: 30px;
+   }
+
+   .features_text p{
+    font-size: 14px;
+   }
+
+  Swiper{
+    width: 50px;
+  }
+
+}
+
+
+@media screen and (max-width: 1207px) {
+    .features_container{
+        
+        flex-direction: column;
+       
+       }
+
+       .features_text h1{
+        font-size: 30px;
+   }
+
+   .features_text p{
+    font-size: 14px;
+    width: 34rem;
+    text-align: center;
+   }
+
+
+}
+
+
+
+@media screen and (max-width: 780px) {
+ 
+    .features_text h1{
+        font-size: 28px;
+        
+   }
+
+   .features_text p{
+    font-size: 12px;
+   
+   }
+
+   .swiper-slide img {
+    width: 36rem;
+    height: 17rem;
+
+  }
+
+}
+
+@media screen and (max-width: 700px) {
+
+    .features_text h1{
+        font-size: 26px;
+        
+   }
+
+    .features_text p{
+        font-size: 12px;
+        width: 32rem;
+       }
+
+    .swiper-slide img {
+        width: 34rem;
+        height: 15rem;
+        transform: translateX(5%)
+      }
+
+
+
+}
+
+@media screen and (max-width: 650px){
+ 
+    .features_text h1{
+        font-size: 24px;
+        
+   }
+
+    .features_text p{
+        font-size: 12px;
+        width: 28rem;
+       }
+
+    .swiper-slide img {
+        width: 30rem;
+        height: 15rem;
+        transform: translateX(10%)
+    
+      }
+
+}
+
+@media screen and (max-width: 600px){
+ 
+    .features_text h1{
+        font-size: 24px;
+        
+   }
+
+    .features_text p{
+        font-size: 12px;
+        width: 22rem;
+       }
+
+    .swiper-slide img {
+        width: 26rem;
+        height: 15rem;
+        transform: translateX(20%)
+    
+      }
+    }
+
+    @media screen and (max-width: 550px){
+ 
+        .features_text h1{
+            font-size: 22px;
+        }
+
+        
+    .features_text p{
+        font-size: 12px;
+        width: 22rem;
+       }
+       
+
+        .swiper-slide img {
+            width: 24rem;
+            height: 15rem;
+            transform: translateX(28%)
+        
+          }
+        }
+
+        @media screen and (max-width: 500px){
+ 
+            .features_text p{
+                width: 18rem;
+               }
+
+            .swiper-slide img {
+                width: 22rem;
+                height: 15rem;
+                transform: translateX(35%)
+            
+              }
+            }
+
+            @media screen and (max-width: 455px){
+ 
+                .features_text h1{
+                    font-size: 20px;
+                }
+
+                .features_text p{
+                    font-size: 10px;
+                   
+                   }
+
+                .swiper-slide img {
+                    width: 20rem;
+                    height: 15rem;
+                    transform: translateX(40%)
+                
+                  }
+                }
+    
+                @media screen and (max-width: 330px){
+ 
+    
+                    .swiper-slide img {
+                        width: 18rem;
+                        height: 15rem;
+                        transform: translateX(50%)
+                    
+                      }
+                    }
+        
+    
