--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -32,6 +32,7 @@
     font-size: 20px;
     line-height: 28px;
     margin-top: 1.5rem;
+    color: white;
 }
 
 .header-content-input{
@@ -44,7 +45,7 @@
 .header-content-input input{
     flex:1.75;
     width: 100%;
-    min-height: 50px;
+    height: 50px;
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 14px;
@@ -59,7 +60,7 @@
 .header-content-input button{
     flex: 0.8;
     width: 100%;
-    min-height: 50px;
+    height: 50px;
     font-family: var(--font-family);
     font-weight: 600;
     font-size: 14px;
@@ -308,9 +309,80 @@
         padding-left: 2rem;
         padding-right: 2rem;
     }
-
-
 }
+
+@media screen and (max-width: 409px){
+    .header_content h1{
+        font-size:22px;
+    }
+
+    .header-content-input{
+        width:80%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .header-content-input input{
+        width: 100%;
+        height: 1rem;
+        font-size: 12px;
+        line-height: 40px;
+        border-radius: 2px;
+    }
+    
+    .header-content-input button{
+        font-size: 12px;
+        line-height: 40px;
+        border-radius: 2px;
+    }
+}
+
+@media screen and (max-width: 368px){
+    .header_content h1{
+        font-size:20px;
+    }
+}
+
+@media screen and (max-width: 334px){
+    .header_content h1{
+        font-size:18px;
+    }
+
+    .header-content-input input{
+        width: 100%;
+        height: 1rem;
+        font-size: 10px;
+        line-height: 40px;
+        border-radius: 2px;
+    }
+    
+    .header-content-input button{
+        font-size: 10px;
+        line-height: 40px;
+        border-radius: 2px;
+    }
+}
+
+@media screen and (max-width: 307px){
+    .header_content h1{
+        font-size:16px;
+    }
+
+    .header-content-input input{
+        width: 100%;
+        height: 1rem;
+        font-size: 8px;
+        line-height: 40px;
+    }
+    
+    .header-content-input button{
+        font-size: 8px;
+        line-height: 40px;
+    }
+}
+
+
 
 
 
