--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,51 +1,102 @@
-*{
-    margin:0;
-    padding:0;
-    text-decoration: none;
+.dashboard_container{
+    display: flex;
+    flex-direction: column;
+
 }
-.container{
-    display:flex;
+
+.dashboard_container h1{
+    margin-top: 8rem;
+    font-weight: 200;
+    font-size: 4rem;
 }
-main{
+
+.dashboard_container #dashboard, #trivia-text{
+    color: white;
+}
+
+.dashboard_header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.dashboard_trivia h2{
+    color: white;
+    font-weight: 200;
+    padding-top: 6rem;
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+.dashboard_trivia-content{
+    background-color: black;
+    width: 28rem;
+}
+
+.wotd_header{
+    margin-top: 2rem;
+    background-color: rgb(72, 16, 77);
     width: 100%;
-    padding: 20px;
+    height: 16rem;
 }
-.sidebar{
-    background: #000;
-    color: #fff;
-    height: 100vh;
-    width: 200px;
-    transition: all 0.5s;
+
+.wotd_header #h2_1{
+    font-size: 3.5rem;
+    padding-top: 4rem;
 }
-.top_section{
-    display: flex;
-    align-items:center;
-    padding:20px 15px;
+
+.wotd_header #h2_2{
+    font-size: 2rem;
 }
-.logo{
-    font-size: 30px;
+
+.wotd_header h2{
+    color: white;
+    font-weight: 200;
+    text-align: center;
 }
-.bars{
-    display: flex;
-    font-size: 25px;
-    margin-left: 50px;
+
+
+
+@media screen and (max-width: 1453px){
+   
 }
-.link{
-    display: flex;
-    color: #fff;
-    padding: 10px 15px;
-    gap: 15px;
-    transition: all 0.5s;
+
+@media screen and (max-width: 1417px){
+   
+
 }
-.link:hover{
-    background:lightskyblue;
-    color: #000;
-    transition: all 0.5s;
+
+@media screen and (max-width: 1375px) {
+
+  
 }
-.active{
-    background: lightskyblue;
-    color: #000;
+
+
+@media screen and (max-width: 1207px) {
+  
+
 }
-.icon, .link_text{
-    font-size: 20px;
+
+@media screen and (max-width: 1050px) {
+  
+
+}
+
+
+@media screen and (max-width: 867px) {
+
+  
+}
+
+@media screen and (max-width: 732px) {
+ 
+}
+
+@media screen and (max-width: 600px) {
+  
+
+}
+
+@media screen and (max-width: 550px){
+ 
 }
