--- a/src/pages/history/history.css
+++ b/src/pages/history/history.css
@@ -5,7 +5,6 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    margin-right: 5rem;
 }
 
 .two_scroll_boxes {
@@ -25,4 +24,21 @@
     min-width: 100px;
     text-align: center;
 
+}
+
+.scrollBox_element {
+    width: 48%;
+}
+
+
+
+
+@media screen and (max-width: 550px) {
+    .two_scroll_boxes { 
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .scrollBox_element {
+        width: 100%;
+    }
 }
