--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -7,6 +7,7 @@
     
 }
 
+
 .login_container{
     display: flex;
     height: 40rem;
@@ -127,7 +128,7 @@
 
 .login_form h1{
     font-size: 26px;
-    font-weight: 600;
+    font-weight: 200;
     margin-top: 80px;
     color: #000000;
 }
@@ -139,4 +140,50 @@
    
     width: 100px;
     transform: translate(-90%, 80%);
+}
+
+
+
+@media screen and (max-width: 1453px){
+   
+}
+
+@media screen and (max-width: 1417px){
+   
+
+}
+
+@media screen and (max-width: 1375px) {
+
+  
+}
+
+
+@media screen and (max-width: 1207px) {
+  
+
+}
+
+@media screen and (max-width: 1050px) {
+  
+
+}
+
+
+@media screen and (max-width: 867px) {
+
+  
+}
+
+@media screen and (max-width: 732px) {
+ 
+}
+
+@media screen and (max-width: 600px) {
+  
+
+}
+
+@media screen and (max-width: 550px){
+ 
 }
