--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -122,7 +122,7 @@
 
 .signup_form h1{
     font-size: 26px;
-    font-weight: 600;
+    font-weight: 200;
     margin-top: 80px;
     color: black;
 }
@@ -134,4 +134,50 @@
    
     width: 100px;
     transform: translate(-90%, 80%);
+}
+
+
+
+@media screen and (max-width: 1453px){
+   
+}
+
+@media screen and (max-width: 1417px){
+   
+
+}
+
+@media screen and (max-width: 1375px) {
+
+  
+}
+
+
+@media screen and (max-width: 1207px) {
+  
+
+}
+
+@media screen and (max-width: 1050px) {
+  
+
+}
+
+
+@media screen and (max-width: 867px) {
+
+  
+}
+
+@media screen and (max-width: 732px) {
+ 
+}
+
+@media screen and (max-width: 600px) {
+  
+
+}
+
+@media screen and (max-width: 550px){
+ 
 }
